--- a/1/0_Atajos/index.html
+++ b/1/0_Atajos/index.html
@@ -7,7 +7,7 @@
     <title>Introducción Java</title>
     <link rel="shortcut icon" type=image/jpg href="../../img/logo/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../../css/styleRed.css">
 
 </head>
 
