--- a/1/9/index.html
+++ b/1/9/index.html
@@ -6,7 +6,7 @@
     <title>Introducción Java</title>
     <link rel="shortcut icon" type=image/jpg href="../../img/logo/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../css/styleBlue.css">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
     <h1>Java y JDBC: Trabajando con una Base de Datos:</h1>
     <ol>
         <li>
-            <a href="#1">Introducción a JDBC Ver el primer video
+            <a href="#1">Introducción a JDBC Ver el primer video </a>
                 <ul>
                     <li>Presentación</li>
                     <li>Entorno y versiones</li>
@@ -35,7 +35,6 @@
                     <li>Haga lo que hicimos en aula</li>
                     <li>Lo que aprendimos</li>
                 </ul>
-            </a>
         </li>
         <li>
             <a href="#2">Ejecutando comandos SQL en Java</a>
