--- a/1/3/index.html
+++ b/1/3/index.html
@@ -24,7 +24,7 @@
     <ol>
         <li>
             <a href="#1">Introducción a herencia</a>
-            <ol>
+            <ul>
                 <li>Presentación</li>
                 <li>Overview Java Parte 2</li>
                 <li>Funcionario</li>
@@ -36,11 +36,11 @@
                 <li>Sintaxis correcta</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#2">Super y reescrita de Métodos</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Overview Aula 1</li>
                 <li>Método Super</li>
@@ -52,11 +52,11 @@
                 <li>Para saber más: Sobrecarga</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#3">Entendiendo Polimorfismo</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Introducción a polimorfismo</li>
                 <li>¿Qué es Polimorfismo?</li>
@@ -68,11 +68,11 @@
                 <li>Resumen</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#4">Herencia y el uso de constructores</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Más sobre polimorfismo</li>
                 <li>Herencia de clases</li>
@@ -81,11 +81,11 @@
                 <li>La anotación @Override</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#5">Clases y métodos abstractos</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Clase abstracta</li>
                 <li>Acerca de las clases abstractas</li>
@@ -96,11 +96,11 @@
                 <li>¿Conoces las clases abstractas?</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#6">Interfaces</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Herencia multiple</li>
                 <li>Heredar de varias clases</li>
@@ -114,11 +114,11 @@
                 <li>Sobre el polimorfismo</li>
                 <li>Haga lo que hicimos en aula</li>
                 <li>Lo que aprendimos</li>
-            </ol>
+            </ul>
         </li>
         <li>
             <a href="#7">Practicando herencia e interfaces</a>
-            <ol>
+            <ul>
                 <li>Proyecto del aula anterior</li>
                 <li>Overview herencia</li>
                 <li>Uso herencia</li>
@@ -131,12 +131,12 @@
                 <li>Proyecto Final</li>
                 <li>Lo que aprendimos</li>
                 <li>Conclusión</li>
-            </ol>
+            </ul>
         </li>
         
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java Polimorfismo: Entendiendo herencia e interfaces</h1>
     <br>
     <br>
     <br>
