--- a/1/4/index.html
+++ b/1/4/index.html
@@ -127,7 +127,7 @@
         </li>
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java Excepciones: Aprenda a crear, lanzar y controlar excepciones:</h1>
     <br>
     <br>
     <br>
