--- a/1/5/index.html
+++ b/1/5/index.html
@@ -109,7 +109,7 @@
         </li>
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java y java.lang: Programe con la clase Object y String:</h1>
     <br>
     <br>
     <br>
