--- a/1/1/index.html
+++ b/1/1/index.html
@@ -139,7 +139,7 @@
         </li>
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java JRE y JDK: compile y ejecute su primer programa</h1>
     <br>
     <br>
     <br>
