--- a/1/2/index.html
+++ b/1/2/index.html
@@ -121,7 +121,7 @@
         </li>
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java OO: Entendiendo la Orientación a Objetos</h1>
     <br>
     <br>
     <br>
