--- a/1/6/index.html
+++ b/1/6/index.html
@@ -162,7 +162,7 @@
         </li>
     </ol>
     <br>
-    <h1>Compendio</h1>
+    <h1>Java y java.util: Colecciones, Wrappers y Lambda expressions:</h1>
     <br>
     <br>
     <br>
